# fire_duck_ext

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  compile_commands.json  description.yml  extension_config.cmake  vcpkg.json
.github/: CODEOWNERS
.github/workflows/: MainDistributionPipeline.yml
src/: fire_duck_ext_extension.cpp  firestore_auth.cpp  firestore_client.cpp  firestore_error.cpp  firestore_index.cpp  firestore_logger.cpp  firestore_optimizer.cpp  firestore_path_utils.cpp  firestore_scanner.cpp  firestore_secrets.cpp  firestore_types.cpp  firestore_writer.cpp
src/include/: fire_duck_ext_extension.hpp  firestore_auth.hpp  firestore_client.hpp  firestore_error.hpp  firestore_index.hpp  firestore_logger.hpp  firestore_optimizer.hpp  firestore_path_utils.hpp  firestore_scanner.hpp  firestore_secrets.hpp  firestore_settings.hpp  firestore_types.hpp  firestore_writer.hpp  httplib.h
test/data/: test_fixtures.json
test/scripts/: run_integration_tests.sh  run_real_firestore_tests.sh  setup_emulator.sh
test/sql/: fire_duck_ext.test  firestore_batch.test  firestore_cache.test  firestore_insert.test  firestore_orderby_limit_pushdown.test  firestore_scan.test  firestore_secrets.test  firestore_types.test  firestore_write.test
